--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -37,11 +37,18 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
+
+      - name: Add required files
+        run: |
+          cp ./assets/mermaid/* ./src
+
       - name: Build with mdBook
         run: mdbook build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
