--- a/src/leetcode/rust/median_of_two_sorted_arrays/Cargo.toml
+++ b/src/leetcode/rust/median_of_two_sorted_arrays/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[lib]
+name = "median_of_two_sorted_arrays"
+path = "src/lib1.rs"
