leetcode: solve 9. Palindrome Number #2
Signed-off-by: auking45 <auking45@gmail.com>

--- a/src/leetcode/rust/palindrome_number/Cargo.toml
+++ b/src/leetcode/rust/palindrome_number/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 
 [dependencies]
 
+[lib]
+name = "palindrome_number"
+path = "src/lib2.rs"
+
 [[bin]]
 name = "debug_bin"
 path = "src/main.rs"
