--- a/src/exercism/rust/poker/Cargo.toml
+++ b/src/exercism/rust/poker/Cargo.toml
@@ -4,3 +4,11 @@ name = "poker"
 version = "1.1.0"
 
 [dependencies]
+
+[lib]
+name = "poker"
+path = "src/lib2.rs"
+
+[[bin]]
+name = "debug_bin"
+path = "src/main.rs"
